--- a/Stealth777/HelperClasses/CustomCellClasses/GroupChat/GroupControlsListTableViewCell.xib
+++ b/Stealth777/HelperClasses/CustomCellClasses/GroupChat/GroupControlsListTableViewCell.xib
@@ -23,32 +23,25 @@
                 <rect key="frame" x="0.0" y="0.0" width="404" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="da6-33-hGB" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MA0-Is-OiE" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="404" height="71"/>
                         <color key="backgroundColor" name="CustomViewBgColor"/>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" title="Report Group">
-                            <color key="titleColor" name="SecondaryThemeColor"/>
-                        </state>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="5"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </button>
+                        <color key="textColor" name="SecondaryThemeColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="da6-33-hGB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Kx3-QZ-BnX"/>
-                    <constraint firstAttribute="bottom" secondItem="da6-33-hGB" secondAttribute="bottom" constant="4" id="SCa-Dt-ukV"/>
-                    <constraint firstItem="da6-33-hGB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="XU1-7u-y7A"/>
-                    <constraint firstAttribute="trailing" secondItem="da6-33-hGB" secondAttribute="trailing" id="twg-nd-SL9"/>
+                    <constraint firstItem="MA0-Is-OiE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="CbV-1y-UKo"/>
+                    <constraint firstAttribute="trailing" secondItem="MA0-Is-OiE" secondAttribute="trailing" id="Cpi-gv-Ths"/>
+                    <constraint firstItem="MA0-Is-OiE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="bDC-F4-qgi"/>
+                    <constraint firstAttribute="bottom" secondItem="MA0-Is-OiE" secondAttribute="bottom" constant="4" id="mNO-oJ-QUu"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="titleBtn" destination="da6-33-hGB" id="srN-Kw-3BK"/>
+                <outlet property="titleLbl" destination="MA0-Is-OiE" id="XE4-1o-J1M"/>
             </connections>
             <point key="canvasLocation" x="198.55072463768118" y="136.94196428571428"/>
         </tableViewCell>
