--- a/Stealth777/HelperClasses/CustomCellClasses/GroupChat/AddParticipantsTableViewCell.xib
+++ b/Stealth777/HelperClasses/CustomCellClasses/GroupChat/AddParticipantsTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,15 +16,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="AddParticipantsTableViewCell" customModule="Stealth777" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="470" height="83"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="88" id="KGk-i7-Jjw" customClass="AddParticipantsTableViewCell" customModule="Stealth777" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="467" height="88"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="470" height="83"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="467" height="88"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEn-hd-S8h">
-                        <rect key="frame" x="0.0" y="0.0" width="470" height="1"/>
+                        <rect key="frame" x="0.0" y="0.0" width="467" height="1"/>
                         <color key="backgroundColor" name="SeperatorColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="beD-Mp-Yq2"/>
@@ -34,7 +34,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hjm-SW-ngJ">
-                        <rect key="frame" x="0.0" y="67" width="470" height="0.5"/>
+                        <rect key="frame" x="0.0" y="83" width="467" height="0.5"/>
                         <color key="backgroundColor" name="SeperatorColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="2JB-LD-Xwj"/>
@@ -44,7 +44,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9f-Lu-zrQ">
-                        <rect key="frame" x="354" y="19.5" width="113" height="29"/>
+                        <rect key="frame" x="351" y="27.5" width="113" height="29"/>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="View All Members">
@@ -54,47 +54,52 @@
                             <action selector="viewAllMembersBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="NnN-EP-LdO"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Participants" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWj-gk-2do" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                        <rect key="frame" x="58" y="26" width="104" height="16.5"/>
-                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
-                        <color key="textColor" name="SecondaryThemeColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kFp-qu-62a">
-                        <rect key="frame" x="0.0" y="15" width="38" height="38"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="38" id="YiH-tb-y2d"/>
-                            <constraint firstAttribute="width" secondItem="kFp-qu-62a" secondAttribute="height" multiplier="1:1" id="tsk-Wt-eCi"/>
-                        </constraints>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" image="cameraIcon"/>
-                        <connections>
-                            <action selector="addParticipantsBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ucI-CJ-cBc"/>
-                        </connections>
-                    </button>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="8T3-kb-nUn">
+                        <rect key="frame" x="0.0" y="15" width="166" height="54"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kFp-qu-62a">
+                                <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="YiH-tb-y2d"/>
+                                    <constraint firstAttribute="width" secondItem="kFp-qu-62a" secondAttribute="height" multiplier="1:1" id="tsk-Wt-eCi"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="cameraIcon"/>
+                                <connections>
+                                    <action selector="addParticipantsBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ucI-CJ-cBc"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Participants" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWj-gk-2do" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
+                                <rect key="frame" x="62" y="0.0" width="104" height="54"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                <color key="textColor" name="SecondaryThemeColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <gestureRecognizers/>
+                    </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="KEn-hd-S8h" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="42L-8Z-eGa"/>
-                    <constraint firstItem="VWj-gk-2do" firstAttribute="centerY" secondItem="kFp-qu-62a" secondAttribute="centerY" id="9AV-LR-yfV"/>
-                    <constraint firstItem="Hjm-SW-ngJ" firstAttribute="top" secondItem="kFp-qu-62a" secondAttribute="bottom" constant="14" id="9F3-VY-G8g"/>
-                    <constraint firstItem="kFp-qu-62a" firstAttribute="top" secondItem="KEn-hd-S8h" secondAttribute="bottom" constant="14" id="EBQ-c0-YuP"/>
-                    <constraint firstItem="kFp-qu-62a" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Fij-DI-ki2"/>
-                    <constraint firstItem="VWj-gk-2do" firstAttribute="leading" secondItem="kFp-qu-62a" secondAttribute="trailing" constant="20" id="KfV-Wj-BZ4"/>
+                    <constraint firstItem="I9f-Lu-zrQ" firstAttribute="centerY" secondItem="8T3-kb-nUn" secondAttribute="centerY" id="NOg-3D-0oq"/>
                     <constraint firstItem="Hjm-SW-ngJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OUU-Mf-CEo"/>
                     <constraint firstAttribute="trailing" secondItem="Hjm-SW-ngJ" secondAttribute="trailing" id="QJb-uS-Vhu"/>
                     <constraint firstItem="KEn-hd-S8h" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="VaA-Ca-3Q0"/>
                     <constraint firstAttribute="trailing" secondItem="I9f-Lu-zrQ" secondAttribute="trailing" constant="3" id="WVi-Bh-h1v"/>
+                    <constraint firstItem="8T3-kb-nUn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="X7c-8V-IdM"/>
                     <constraint firstAttribute="bottom" secondItem="Hjm-SW-ngJ" secondAttribute="bottom" id="YwD-cM-Vwc"/>
-                    <constraint firstItem="I9f-Lu-zrQ" firstAttribute="centerY" secondItem="kFp-qu-62a" secondAttribute="centerY" id="nv8-di-d55"/>
+                    <constraint firstItem="8T3-kb-nUn" firstAttribute="top" secondItem="KEn-hd-S8h" secondAttribute="bottom" constant="14" id="cG8-5M-1tX"/>
+                    <constraint firstItem="Hjm-SW-ngJ" firstAttribute="top" secondItem="8T3-kb-nUn" secondAttribute="bottom" constant="14" id="qqL-50-20i"/>
                     <constraint firstAttribute="trailing" secondItem="KEn-hd-S8h" secondAttribute="trailing" id="teh-v4-Qeh"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="addParticipantsLbl" destination="VWj-gk-2do" id="30x-wO-Sii"/>
+                <outlet property="addParticipantsStack" destination="8T3-kb-nUn" id="Xgd-8g-ABX"/>
                 <outlet property="viewAllMembersBtn" destination="I9f-Lu-zrQ" id="bWU-Jy-0ry"/>
             </connections>
-            <point key="canvasLocation" x="263.768115942029" y="129.57589285714286"/>
+            <point key="canvasLocation" x="261.59420289855075" y="131.25"/>
         </tableViewCell>
     </objects>
     <designables>
