--- a/Stealth777/HelperClasses/CustomViews/GroupChat/GroupChatHeaderView.xib
+++ b/Stealth777/HelperClasses/CustomViews/GroupChat/GroupChatHeaderView.xib
@@ -26,18 +26,12 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="254" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="274" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oPK-mY-fsz">
-                    <rect key="frame" x="0.0" y="0.0" width="254" height="50"/>
+                    <rect key="frame" x="0.0" y="0.0" width="274" height="50"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NFT Artist Team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ee9-lk-3fg">
-                            <rect key="frame" x="37" y="0.0" width="88" height="14.5"/>
-                            <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nBy-Dm-5qF" customClass="UIImageViewCustomClass" customModule="Stealth777" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                             <constraints>
@@ -56,33 +50,54 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </imageView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sideArrowSmall" translatesAutoresizingMaskIntoConstraints="NO" id="ffl-L8-2Wc">
-                            <rect key="frame" x="130" y="2.5" width="10" height="10"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="10" id="0FA-Jf-P0V"/>
-                                <constraint firstAttribute="height" constant="10" id="RCZ-TP-mUv"/>
-                            </constraints>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Richard,Jack,Alex" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bTC-nH-jU0">
-                            <rect key="frame" x="37" y="16.5" width="110" height="17"/>
-                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="oWS-tW-7r3">
+                            <rect key="frame" x="37" y="0.0" width="143" height="36.5"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ozy-96-vPw">
+                                    <rect key="frame" x="0.0" y="0.0" width="143" height="17"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NFT Artist Team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ee9-lk-3fg">
+                                            <rect key="frame" x="0.0" y="0.0" width="88" height="17"/>
+                                            <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sideArrowSmall" translatesAutoresizingMaskIntoConstraints="NO" id="ffl-L8-2Wc">
+                                            <rect key="frame" x="93" y="3.5" width="10" height="10"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="10" id="0FA-Jf-P0V"/>
+                                                <constraint firstAttribute="height" constant="10" id="RCZ-TP-mUv"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="ee9-lk-3fg" secondAttribute="bottom" id="61H-0D-woC"/>
+                                        <constraint firstItem="ffl-L8-2Wc" firstAttribute="leading" secondItem="ee9-lk-3fg" secondAttribute="trailing" constant="5" id="Ie4-eQ-1sV"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ffl-L8-2Wc" secondAttribute="trailing" id="Yvg-tD-Sjq"/>
+                                        <constraint firstAttribute="height" constant="17" id="cQ9-5h-0do"/>
+                                        <constraint firstItem="ffl-L8-2Wc" firstAttribute="centerY" secondItem="ee9-lk-3fg" secondAttribute="centerY" id="g8u-iE-6h2"/>
+                                        <constraint firstItem="ee9-lk-3fg" firstAttribute="top" secondItem="ozy-96-vPw" secondAttribute="top" id="kWt-FY-UV4"/>
+                                        <constraint firstItem="ee9-lk-3fg" firstAttribute="leading" secondItem="ozy-96-vPw" secondAttribute="leading" id="pd1-rK-gcU"/>
+                                    </constraints>
+                                </view>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Richard,Jack,Alex" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bTC-nH-jU0">
+                                    <rect key="frame" x="0.0" y="20" width="143" height="16.5"/>
+                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bTC-nH-jU0" secondAttribute="trailing" id="4xV-fe-6Rr"/>
+                        <constraint firstItem="oWS-tW-7r3" firstAttribute="leading" secondItem="nBy-Dm-5qF" secondAttribute="trailing" constant="7" id="0e8-k4-eVm"/>
                         <constraint firstItem="nBy-Dm-5qF" firstAttribute="leading" secondItem="oPK-mY-fsz" secondAttribute="leading" id="6gg-Uv-m6V"/>
-                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ffl-L8-2Wc" secondAttribute="trailing" id="ETP-Pj-7LC"/>
+                        <constraint firstItem="oWS-tW-7r3" firstAttribute="top" secondItem="nBy-Dm-5qF" secondAttribute="top" id="9Gf-jU-4xw"/>
                         <constraint firstItem="nBy-Dm-5qF" firstAttribute="top" secondItem="oPK-mY-fsz" secondAttribute="top" id="eaz-ul-Ay8"/>
-                        <constraint firstItem="bTC-nH-jU0" firstAttribute="leading" secondItem="ee9-lk-3fg" secondAttribute="leading" id="gCq-MZ-XAn"/>
-                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bTC-nH-jU0" secondAttribute="bottom" id="hRd-TZ-DgA"/>
-                        <constraint firstItem="ffl-L8-2Wc" firstAttribute="centerY" secondItem="ee9-lk-3fg" secondAttribute="centerY" id="lYY-yq-1Dt"/>
-                        <constraint firstItem="ee9-lk-3fg" firstAttribute="top" secondItem="nBy-Dm-5qF" secondAttribute="top" id="lyh-aE-Vun"/>
-                        <constraint firstItem="bTC-nH-jU0" firstAttribute="top" secondItem="ee9-lk-3fg" secondAttribute="bottom" constant="2" id="tWc-NZ-ZJC"/>
-                        <constraint firstItem="ee9-lk-3fg" firstAttribute="leading" secondItem="nBy-Dm-5qF" secondAttribute="trailing" constant="7" id="vVT-N6-jkF"/>
-                        <constraint firstItem="ffl-L8-2Wc" firstAttribute="leading" secondItem="ee9-lk-3fg" secondAttribute="trailing" constant="5" id="zdf-z2-9Ol"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oWS-tW-7r3" secondAttribute="trailing" id="gOR-qG-7oR"/>
+                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="nBy-Dm-5qF" secondAttribute="bottom" constant="10" id="le2-Gy-2AD"/>
                     </constraints>
                 </view>
             </subviews>
@@ -95,7 +110,7 @@
                 <constraint firstItem="oPK-mY-fsz" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="vZC-BO-MVc"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="21.739130434782609" y="-182.8125"/>
+            <point key="canvasLocation" x="36.231884057971016" y="-182.8125"/>
         </view>
     </objects>
     <resources>
