--- a/Stealth777/Modules/CHAT/PrivateChat/View/PrivateChatStoryboard.storyboard
+++ b/Stealth777/Modules/CHAT/PrivateChat/View/PrivateChatStoryboard.storyboard
@@ -99,6 +99,9 @@
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="sendTextMsgIcon"/>
+                                        <connections>
+                                            <action selector="actionSend" destination="Y6W-OH-hqX" eventType="touchUpInside" id="4K8-ei-kEW"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" name="HeaderBgColor"/>
@@ -153,6 +156,7 @@
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="bmF-0X-u0q"/>
                     <connections>
                         <outlet property="chatTableView" destination="gm7-3b-9uc" id="jg9-tH-rD9"/>
+                        <outlet property="txtMessage" destination="iia-dQ-x4p" id="nhi-2a-YNy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
