--- a/Stealth777/Modules/TAB BAR CONTROLLER/View/PublicModeTabBarControllerStoryboard.storyboard
+++ b/Stealth777/Modules/TAB BAR CONTROLLER/View/PublicModeTabBarControllerStoryboard.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gNf-mj-rSK">
     <device id="retina6_7" orientation="portrait" appearance="dark"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -283,7 +282,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="777-Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIC-u4-Rcq" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="154.66666666666666" y="220" width="118.99999999999997" height="21"/>
+                                <rect key="frame" x="154" y="220" width="120" height="21"/>
                                 <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -295,7 +294,7 @@
                                         <rect key="frame" x="41.333333333333329" y="13.333333333333314" width="27" height="29"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M9W-vV-Pi4" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="40" y="53.333333333333314" width="29.333333333333329" height="15.333333333333329"/>
+                                        <rect key="frame" x="39.333333333333329" y="53.333333333333314" width="30.666666666666671" height="15.333333333333329"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="13"/>
                                         <color key="textColor" name="SecondaryThemeColor"/>
                                         <nil key="highlightedColor"/>
@@ -351,7 +350,7 @@
                                         <rect key="frame" x="36.666666666666657" y="9.3333333333333144" width="36" height="36"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receive" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NU7-tG-4HZ" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="32.333333333333314" y="53.333333333333314" width="45" height="15.333333333333329"/>
+                                        <rect key="frame" x="31.666666666666661" y="53.333333333333314" width="46.333333333333343" height="15.333333333333329"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="13"/>
                                         <color key="textColor" name="SecondaryThemeColor"/>
                                         <nil key="highlightedColor"/>
@@ -397,7 +396,7 @@
                                 <rect key="frame" x="288.66666666666669" y="297.66666666666669" width="109.33333333333331" height="80.666666666666686"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMo-vG-Dpo" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="46.333333333333314" y="53.333333333333314" width="17" height="15.333333333333329"/>
+                                        <rect key="frame" x="45.333333333333314" y="53.333333333333314" width="19" height="15.333333333333329"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="13"/>
                                         <color key="textColor" name="SecondaryThemeColor"/>
                                         <nil key="highlightedColor"/>
@@ -718,41 +717,6 @@
             <point key="canvasLocation" x="659" y="2289"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="3A8-hQ-jr0">
-            <size key="intrinsicContentSize" width="180.33333333333334" height="23.666666666666668"/>
-        </designable>
-        <designable name="4Ia-2d-i76">
-            <size key="intrinsicContentSize" width="175.66666666666666" height="16.666666666666668"/>
-        </designable>
-        <designable name="53Q-sr-YhZ">
-            <size key="intrinsicContentSize" width="101" height="32"/>
-        </designable>
-        <designable name="B0n-1l-7Nc">
-            <size key="intrinsicContentSize" width="180" height="24"/>
-        </designable>
-        <designable name="HMo-vG-Dpo">
-            <size key="intrinsicContentSize" width="17" height="15.333333333333334"/>
-        </designable>
-        <designable name="M9W-vV-Pi4">
-            <size key="intrinsicContentSize" width="29.333333333333332" height="15.333333333333334"/>
-        </designable>
-        <designable name="NU7-tG-4HZ">
-            <size key="intrinsicContentSize" width="45" height="15.333333333333334"/>
-        </designable>
-        <designable name="dDr-GR-b2k">
-            <size key="intrinsicContentSize" width="178" height="20"/>
-        </designable>
-        <designable name="kYJ-Fu-hvL">
-            <size key="intrinsicContentSize" width="72" height="20.333333333333332"/>
-        </designable>
-        <designable name="rIC-u4-Rcq">
-            <size key="intrinsicContentSize" width="119" height="21.333333333333332"/>
-        </designable>
-        <designable name="zaa-Vy-eJw">
-            <size key="intrinsicContentSize" width="177" height="20"/>
-        </designable>
-    </designables>
     <resources>
         <image name="QRIcon" width="28" height="30"/>
         <image name="homeMenu-addFriendIcon" width="22.333333969116211" height="23.666666030883789"/>
