Added groupchat send and list messages, Added general structure for API handling

--- a/Stealth777/HelperClasses/CustomCellClasses/PrivateChat/PrivateChatSenderTableViewCell.xib
+++ b/Stealth777/HelperClasses/CustomCellClasses/PrivateChat/PrivateChatSenderTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -65,6 +65,7 @@
                             <constraint firstAttribute="trailing" secondItem="niP-ex-U7w" secondAttribute="trailing" constant="-5.2000000000000002" id="lbr-VL-vNF"/>
                             <constraint firstItem="oqe-Rh-Q5K" firstAttribute="top" secondItem="Lc8-qt-FZY" secondAttribute="top" constant="6" id="qvU-1z-26m"/>
                             <constraint firstItem="jKP-SL-JjV" firstAttribute="centerY" secondItem="Chv-s3-AbT" secondAttribute="centerY" id="sW7-VZ-oUP"/>
+                            <constraint firstItem="Chv-s3-AbT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Lc8-qt-FZY" secondAttribute="leading" constant="13" id="y7C-Bx-iyR"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
