--- a/Stealth777/Modules/CHAT/GroupChat/View/GroupChatStoryboard.storyboard
+++ b/Stealth777/Modules/CHAT/GroupChat/View/GroupChatStoryboard.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_7" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -372,6 +372,9 @@
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="sendTextMsgIcon"/>
+                                        <connections>
+                                            <action selector="actionSend" destination="elA-NF-th2" eventType="touchUpInside" id="Ikq-YJ-ETe"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" name="HeaderBgColor"/>
@@ -425,6 +428,7 @@
                     </view>
                     <connections>
                         <outlet property="chatTableView" destination="aij-JS-bdo" id="92u-DL-5CD"/>
+                        <outlet property="txtMessage" destination="xOd-6u-RzY" id="Uw7-xN-5ek"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="08W-b6-iQc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
