--- a/Stealth777/HelperClasses/CustomCellClasses/PrivateChat/PrivateChatReceiverTableViewCell.xib
+++ b/Stealth777/HelperClasses/CustomCellClasses/PrivateChat/PrivateChatReceiverTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -54,6 +54,7 @@
                         <constraints>
                             <constraint firstItem="yst-kE-IrV" firstAttribute="trailing" secondItem="bHE-oB-j20" secondAttribute="trailing" id="Kui-Ad-rKF"/>
                             <constraint firstItem="yst-kE-IrV" firstAttribute="top" secondItem="bHE-oB-j20" secondAttribute="bottom" constant="2" id="PCb-Du-5pY"/>
+                            <constraint firstItem="yst-kE-IrV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VWu-LF-Vt6" secondAttribute="trailing" constant="13" id="QFN-WZ-5gw"/>
                             <constraint firstAttribute="trailing" secondItem="bHE-oB-j20" secondAttribute="trailing" constant="13" id="S63-HF-k1e"/>
                             <constraint firstItem="VWu-LF-Vt6" firstAttribute="leading" secondItem="HE6-U7-7nU" secondAttribute="leading" constant="-5.2000000000000002" id="YJo-lY-eh3"/>
                             <constraint firstAttribute="bottom" secondItem="VWu-LF-Vt6" secondAttribute="bottom" constant="-0.69999999999999996" id="eg8-GD-ctd"/>
